feat: add sizes and event emitter

--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@ body {
 
 .webgl {
 	position: fixed;
-	top: 0;
-	left: 0;
+	width: 100% !important;
+	height: 100% !important;
 	outline: none;
 }
